<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#C8F1D9">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#fff">
        <Button
            android:id="@+id/btn_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linearlayout"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/btn_gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridlayout"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/btn_staggeredLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staggeredlayout"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>