<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetailActivity"
    android:background="#EBEDEF">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_image"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Name"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="description"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mrp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:id="@+id/detail_mrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="mrp"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>